TAG: qcreports_db-4-2-1-20
DATE: 05/26/2009
STAFF: lec
CHANGES:
1) removed mgd/ACC_GenBank.sql
2) removed mgd/MGI_RepSequences.py (TR8121)

TAG: qcreports_db-4-2-1-19
TAG: qcreports_db-4-2-1-18
DATE: 05/19/2009
STAFF: lec
CHANGES:
1) TR5226; remove weekly/SEQ_GenBank.py per Bob/Lori

TAG: qcreports_db-4-2-1-17
DATE: 05/12/2009
STAFF: mhall
CHANGES:
1) TR8820
   GXD_AssayInCacheNotInIndex.py
   GXD_AssayInIndexNotInCache.py

TAG: qcreports_db-4-2-1-16
DATE: 05/12/2009
STAFF: lec
CHANGES:
1) TR9643; added Cell Commun Signal, J Biomed Sci, Neural Develop
   GXD_Images.py
   RECOMB_Images.py

TAG: qcreports_db-4-2-1-15
DATE: 05/06/2009
STAFF: mhall
CHANGES:
1) TR9613/RECOMB_Images.sql; add to qcr.html
2) TR9613/RECOMB_LackingImages.sql; add to qcr.html

TAG: qcreports_db-4-2-1-14
DATE: 04/30/2009
STAFF: lec
CHANGES:
1) TR9621/RECOMB_ImageCheck.sql; add to qcr.html

TAG: qcreports_db-4-2-1-13
DATE: 04/30/2009
STAFF: lec
CHANGES:
1) fix print errors:  SEQ_Deleted.sql, SEQ_Dummy.sql)

TAG: qcreports_db-4-2-1-12
DATE: 04/29/2009
STAFF: lec
CHANGES:
1) TR9621/GXD_ImageCheck.sql
2) TR9621/RECOMB_ImageCheck.sql (new)

TAG: qcreports_db-4-2-1-11
DATE: 04/16/2009
STAFF: lec
CHANGES:
1) TR9616/GXD_LackingImages.py

TAG: qcreports_db-4-2-1-10
TAG: qcreports_db-4-2-1-9
DATE: 04/09/2009
STAFF: mhall
CHANGES:
1) TR9530/GO_Combined_Report.py

TAG: qcreports_db-4-2-1-8
DATE: 04/07/2009
STAFF: lec
CHANGES:
1) TR9606/GXD_Images.py

TAG: qcreports_db-4-2-1-7
DATE: 03/30/2009
STAFF: mhall
CHANGES:
1) TR9555/MRK_New_QTLS.py

TAG: qcreports_db-4-2-1-6
TAG: qcreports_db-4-2-1-5
TAG: qcreports_db-4-2-1-4
DATE: 03/30/2009
STAFF: mhall
CHANGES:
1) TR9557/GXD_Stats.py
2) TR9452/NOMEN_Uninformative_FAM_Markers.py

TAG: qcreports_db-4-2-1-3
TAG: qcreports_db-4-2-1-2
DATE: 03/24/2009
STAFF: lec
CHANGES:
1) TR9526/GXD_Stats.py
2) TR9563/GXD_FullCodeGene.sql
3) TR9566/GXD_ImagesUnused.py

TAG: qcreports_db-4-2-1-1
DATE: 03/18/2009
STAFF: dbm
CHANGES: