@@ -304,7 +304,6 @@ be used at times to test reports for <I>future</I> public consumption.)
 <A NAME="sequence"><B>Sequences</B></A>
 <OL>
 <LI><A HREF="/data/reports/qcreports_db/output/SEQ_Deleted.sql.rpt">Deleted Sequences with MGI Associations</A>
-<LI><A HREF="/data/reports/qcreports_db/output/SEQ_SeqRefMrkNoSeqMrk.sql.rpt">Sequence References Associated with Markers but no Sequence/Marker</A>
 <LI><A HREF="/data/reports/qcreports_db/output/SEQ_Split.sql.rpt">Split Sequences</A>
 <LI><A HREF="/data/reports/qcreports_db/output/SEQ_MarkerAnnotation.sql.rpt">Markers Annotated to a Secondary Sequence Accession ID</A>
 <LI><A HREF="/data/reports/qcreports_db/output/SEQ_Dummy.sql.rpt">Dummy Sequences Annotated to Mouse Marker (report a) & Molecular Segments (report b) </A>
